fix: The overflow of body, this was caused by the - header. no left-0 was there on absolute - video section. -mx-4 was causing this

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -9,10 +9,14 @@
 
 body {
   font-family: Arial, Helvetica, sans-serif;
+  width: 100%;
+  overflow-x: hidden;
+  border: 2px solid blue;
   /* max-width: 100vw; */
 }
 
 * {
+  box-sizing: border-box;
   /* border: 2px solid red */
   /* background-color: rgb(194, 47, 47); */
 }
